--- a/html-css/exercicios/ex008/index.html
+++ b/html-css/exercicios/ex008/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatação de textos</title>
+    <style>
+        mark {
+            background-color: green
+        }
+    </style>
 </head>
 <body>
     <h1>Principais formatações</h1>
@@ -12,5 +17,18 @@
     <p>Nesta frase termos um termo. Tecla: strong  <strong> em Negrito</strong></p>
     <h2>Itálico / Ênfase</h2>
     <p>Nesta frase, temos um <em>termo em itálico. Tecla: em</em> usando a tag</p>
+    <h2>Texto marcado</h2>
+    <p>Podemos também <mark>criar um texto marcado</mark> usando a tag MARK</p>
+    <p>Outro texto<mark>marcado</mark></p>
+    <h2>Texto grande e pequeno</h2>
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo</p>
+    <h2>Texto deletado</h2>
+    <p>Podemos chamar de <del>texto excluído</del> algo que tem que ser lido mas não considerado</p>
+    <h2>Texto inserido</h2>
+    <p>Podemos chamar de <ins>texto inserido</ins> algo que seja para dar ênfase</p>
+    <h2>Texto sobreescrito</h2>
+    <p>Para inserir coisas do tipo: x<sup>20</sup>+3</p>
+    <h2>Texto subescrito</h2>
+    <p>Para inserir coisas como: H<sub>2</sub>O</p>
 </body>
 </html>
