--- a/html-css/exercicios/ex009/index.html
+++ b/html-css/exercicios/ex009/index.html
@@ -21,5 +21,34 @@
         <li>Mandeiga</li>
         <li>Pão</li>
     </ul>
+    <h2>Juntando listas</h2>
+    <ol>
+        <li>Antigas</li>
+        <ol>Teste</ol>
+        <ol>Teste 2</ol>
+        <li>Novas</li>
+        <ol>Teste</ol>
+        <ol>teste</ol>
+    </ol>
+    <h2>Jogos favoritos</h2>
+    <ol>
+        <li type="I">A</li>
+        <ul type="square" >
+            <li>abc</li>
+            <li>abc</li>
+        </ul>
+        <li type="I">B</li>
+        <ul type="circle">
+            <li>abc</li>
+            <li>abc</li>
+            <ul type="circle">
+                <li>abcd</li>
+        </ul>
+    </ol>
+<h2>Lista de definição</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>Linguagem de marcação</dd>
+    </dl>
 </body>
 </html>
