Avanço nos links

--- a/html-css/exercicios/ex010/index.html
+++ b/html-css/exercicios/ex010/index.html
@@ -10,6 +10,9 @@
     
     <h1>Usando links externos</h1>
     <p>Você pode acessar meu repositório <a href="https://github.com/M7theus" target="_blank" rel="external">público no github</a></p>
+    <h2>Usando-links</h2>
+    <p>Está é a primeira página do site, se você quiser, pode acessar <a href="pag002.html" rel="next" target="_self">também a segunda página</a> </p>
+    <p>Você também pode acessar a página de <a href="noticias/pague003.html" rel="next" target="_self">noticias</a></p>
 
 </body>
 </html>
