--- a/html-css/exercicios/ex010/index.html
+++ b/html-css/exercicios/ex010/index.html
@@ -14,5 +14,11 @@
     <p>Está é a primeira página do site, se você quiser, pode acessar <a href="pag002.html" rel="next" target="_self">também a segunda página</a> </p>
     <p>Você também pode acessar a página de <a href="noticias/pague003.html" rel="next" target="_self">noticias</a></p>
 
+    <h1>Links para download</h1>
+    <ul>
+            <li><a href="livro/10 - Ligações em toda parte.pdf" download="Ligações em toda parte.pdf" type="application/pdf">Baixar o livro em pdf</a></li>
+            <li><a href="#"></a>Livro compactado em zip</li>
+        
+    </ul>
 </body>
 </html>
