--- a/html-css/exercicios/ex011/index.html
+++ b/html-css/exercicios/ex011/index.html
@@ -15,5 +15,12 @@
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
 
+    <h1>Reproduzindo áudios</h1>
+    <p>Aprendendo a reproduzir áudio</p>
+    <audio preload="metadata" controls>
+        <source src="media/musica1.mp3" type="audio/mpeg">
+        <source src="media/musica1.ogg" type="audio/ogg" > 
+        <p>Infelizmente seu navegador não consegue reproduzir aúdio. <a href="media/musica1.mp3">Baixe-o cliando aqui</a></p>
+    </audio>
 </body>
 </html>
