--- a/html-css/exercicios/ex012/index.html
+++ b/html-css/exercicios/ex012/index.html
@@ -15,5 +15,7 @@
         <p>Seu navegador não tem compatibilidade com reprodução de video</p>
     </video>
 
+        <h1>Inserindo vídeos do YouTube</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
