--- a/modulo-02/html-css/exercicios/ex017/index.html
+++ b/modulo-02/html-css/exercicios/ex017/index.html
@@ -9,6 +9,10 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-size: 1em;
         }
+
+        p{
+            font: italic bold 1em 'Work Sans', sans-serif;
+        }
     </style>
     <title>Fontes</title>
 </head>
