--- a/modulo-02/html-css/exercicios/ex019/seletor01.html
+++ b/modulo-02/html-css/exercicios/ex019/seletor01.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <h1 id="principal" >Site em HTMl</h1>
-    <h1>Aprendendo HTML</h1>
-    <h2>HTML básico</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero id in necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
-    <h2>HTML intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero id in necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
-    <h2>HTML avançado</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero id in necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
-    <h2>CSS básico</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero id in necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
-    <h2>CSS intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero id in necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
-    <h2>CSS avançado</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero id in necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
+    <h1 class="efeito">Aprendendo HTML</h1>
+    <h2 class="basico" >HTML básico</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="teste" >Vero id in</span> necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
+    <h2 class="intermediario" >HTML intermediário</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="teste" >Vero id in</span> necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
+    <h2 class="avancado" >HTML avançado</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="teste" >Vero id in</span> necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
+    <h1 class="efeito" >Aprendendo CSS</h1>
+    <h2 class="basico" >CSS básico</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="teste" >Vero id in</span> necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
+    <h2 class="intermediario" >CSS intermediário</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="teste" >Vero id in</span> necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
+    <h2 class="avancado efeito">CSS avançado</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="teste" >Vero id in</span> necessitatibus accusantium provident quis eum, atque nesciunt quasi neque! Iusto ab quod vitae nobis eligendi asperiores ad enim repudiandae.</p>
 
 </body>
 </html>
