--- a/modulo-02/html-css/exercicios/ex021/caixa01.html
+++ b/modulo-02/html-css/exercicios/ex021/caixa01.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Exemplo de caixa box-level</h1>
-    <p>Parágrafos são exemplos de box-level<a href="#"> Links são exemplo de box in-line</a></p>
+    <p>Parágrafos são exemplos de box-level<a href="#" id="a"> Links são exemplo de box in-line</a>
+    </p>
 
 </body>
 </html>
