--- a/modulo-02/html-css/desafios/d010/index.html
+++ b/modulo-02/html-css/desafios/d010/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h2>Curiosidades de tecnologia</h2>
+        <h1>Curiosidades de tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o <span> <br> mundo Tech, em um único lugar.</span></p>
         <nav>
             <a href="#">Home</a>
@@ -18,7 +18,15 @@
             <a href="#">Fale Conosco</a>
         </nav>
     </header>
-
+    <main>
+        <section>
+            <h3>História do mascote do androide
+            </h3>
+            <p>
+                Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+            </p>
+        </section>
+    </main>
 
 </body>
 </html>
