--- a/modulo-02/html-css/desafios/d010/index.html
+++ b/modulo-02/html-css/desafios/d010/index.html
@@ -22,9 +22,26 @@
         <section>
             <h3>História do mascote do androide
             </h3>
-            <p>
+            <p class="formatacao">
                 Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
             </p>
+
+            <article>
+             <h3>A primeira versão</h3>   
+             <p class="formatacao">A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+
+             <picture>
+                <source media="(max-width: 950px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <img src="imagens/dan-droids.png" alt="bugdroid">
+             </picture>
+
+             <p class="formatacao">Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
+            </article>
+
+            <article>
+                <h3>Surge um novo mascote</h3>
+                <p class="formatacao">A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            </article>
         </section>
     </main>
 
