--- a/modulo-02/html-css/desafios/d010/index.html
+++ b/modulo-02/html-css/desafios/d010/index.html
@@ -31,7 +31,7 @@
              <p class="formatacao">A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
              <picture>
-                <source media="(max-width: 950px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png">
                 <img src="imagens/dan-droids.png" alt="bugdroid">
              </picture>
 
@@ -41,8 +41,32 @@
             <article>
                 <h3>Surge um novo mascote</h3>
                 <p class="formatacao">A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+                
+                <picture>
+                    <source media="(max-width: 850px )" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+                    <img src="imagens/irina-blok.jpg" alt="foto">
+                </picture>
+                <p class="formatacao">A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+
+                <picture><img src="imagens/bugdroid.png" alt="bugdroid" class="foto"></picture>
+                <p class="formatacao">A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
+
+                <article id="fundo">
+                    <picture>
+                        <iframe width="1100" height="500" id="video" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </picture>
+                </article>
             </article>
         </section>
+
+        <section >
+            <article id="grade">
+                <h4 id="titulo">Quer aprender mais?</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, animi nemo voluptatibus, quasi repellendus vel ea quam quae, quod non dolores porro iusto enim excepturi rerum quo minus molestiae tenetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nemo velit ad architecto eum aliquid maxime sunt dolorem distinctio placeat, ratione nobis neque ut officiis dignissimos rerum fugiat magnam! Hic?</p>
+            </article>
+        </section>
+
     </main>
 
 </body>
