--- a/modulo-02/html-css/desafios/d010/index.html
+++ b/modulo-02/html-css/desafios/d010/index.html
@@ -60,11 +60,40 @@
         </section>
 
         <section >
+
             <article id="grade">
-                <h4 id="titulo">Quer aprender mais?</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, animi nemo voluptatibus, quasi repellendus vel ea quam quae, quod non dolores porro iusto enim excepturi rerum quo minus molestiae tenetur.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nemo velit ad architecto eum aliquid maxime sunt dolorem distinctio placeat, ratione nobis neque ut officiis dignissimos rerum fugiat magnam! Hic?</p>
+                    <h4 id="titulo">Quer aprender mais?</h4>
+
+                <div id="tabela">
+                    <p class="formatacao2">Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
+                   <ul id="lista">
+                       <li>1.5 - Cupcake</li>
+                       <li>1.6 - Donut</li>
+                       <li>3.0 - Eclair</li>
+                       <li>2.2 - Froyo</li>
+                       <li>2.3 - Gingerbread</li>
+                       <li>3.0 - Honeycomb</li>
+                       <li>4.0 - Ice Cream Sandwich</li>
+                       <li>4.1 - Jelly Bean</li>
+                       <li>4.4 - KitKat</li>
+                       <li>5.0 - Lolipop</li>
+                       <li>6.0 - Marshmallow</li>
+                       <li>7.0 - Nougat</li>
+                       <li>8.0 - Oreo</li>
+                       <li>9.0 - Pie</li>
+                   </ul>
+                   <p class="formatacao2">
+                    Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10. 
+                    <br>
+                    <br>
+                    Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                    [/EXTRA]
+                    <br>
+                    </p>
+                </div>
+
             </article>
+
         </section>
 
     </main>
