--- a/modulo-03/html-css/exercicios/ex022/fundo006.html
+++ b/modulo-03/html-css/exercicios/ex022/fundo006.html
@@ -7,22 +7,25 @@
     <style>
         body{
             height: 100vh;
-            background-color: rgb(0, 0, 0);
+            /*background-color: rgb(0, 0, 0);
             background-image: url('/modulo-03/html-css/exercicios/ex022/imagens/wallpaper002.jpg');
             background-position: center top;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+            background: black url('/modulo-03/html-css/exercicios/ex022/imagens/pattern002.png') center top no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color: white;
             padding: 10px;
-            width: 400px;
+            max-width: 600px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 5px;
         }
     </style>
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
 <body>
     <main>
