--- a/modulo-03/html-css/desafios/d011/d011.html
+++ b/modulo-03/html-css/desafios/d011/d011.html
@@ -10,24 +10,24 @@
         }
         #dentro{
             position: relative;
-            height: 100vh;
             background-image: url('/modulo-03/html-css/desafios/d011/imagens/espaco.jpg');
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
             background-attachment: fixed;
+            background-size: cover;
+            background-repeat: no-repeat;
             background-position: center center;
-
+            height: 100vh;
         }
         #fora{
             position: absolute;
-            height: 100vh;
             background-image: url('/modulo-03/html-css/desafios/d011/imagens/astronauta.png');
-            background-repeat: repeat;
+            background-repeat: no-repeat;
             background-size: 100% 100%;
-            
+            height: 400px;
+            width: 400px;
+
             left: 50%;
             top: 50%;
-            
+
             transform: translate(-50%,-50%);
         }
     </style>
