--- a/modulo-03/html-css/exercicios/ex023/tabela002.html
+++ b/modulo-03/html-css/exercicios/ex023/tabela002.html
@@ -8,6 +8,14 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
         }
+
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         table{
             width: 600px;
             border-collapse: collapse;
@@ -31,10 +39,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width:100px;">População</th>
             </tr>
         </thead>
 
@@ -71,7 +80,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de habitantes:</th>
+                <th scope="row">Total de habitantes:</th>
                 <td class="num"><strong>000.000.000</strong></td>
             </tr>
         </tfoot>
