--- a/modulo-03/html-css/exercicios/ex023/tabela002.html
+++ b/modulo-03/html-css/exercicios/ex023/tabela002.html
@@ -76,6 +76,18 @@
                 <td>Pernambuco</td>
                 <td class="num">9 674 793</td>
             </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9 240 580</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8 777 124</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7 338 473</td>
+            </tr>
         </tbody>
 
         <tfoot>
