--- a/modulo-03/html-css/exercicios/ex023/tabela002.html
+++ b/modulo-03/html-css/exercicios/ex023/tabela002.html
@@ -25,8 +25,13 @@
             border: 1px solid black;
             padding: 10px;
         }
+
+        tbody > tr:nth-child(2n){
+            background-color: lightblue;
+        }
+
         thead,tfoot{
-            background-color: gray;
+            background-color: rgb(66, 65, 65);
             color: white;
             font-weight: bolder;
         }
