--- a/modulo-03/html-css/exercicios/ex023/tabela002.html
+++ b/modulo-03/html-css/exercicios/ex023/tabela002.html
@@ -19,6 +19,7 @@
         table{
             width: 600px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th{
@@ -35,6 +36,13 @@
             color: white;
             font-weight: bolder;
         }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(66, 65, 65);
+        }
+
         .num{
             text-align: right;
         }
@@ -92,6 +100,42 @@
             <tr>
                 <td>Santa Catarina</td>
                 <td class="num">7 338 473</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td class="num">000</td>
             </tr>
         </tbody>
 
