--- a/modulo-03/html-css/exercicios/ex024/tabela.html
+++ b/modulo-03/html-css/exercicios/ex024/tabela.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        caption{
+            background-color: rgba(128, 128, 128, 0.39);
+            font-size: 2em;
+        }
         table{
             border-collapse: collapse;
         }
@@ -28,14 +32,17 @@
 </head>
 <body>
     <table>
+        <caption>Filmes favoritos</caption>
+        <thead>
+            <tr>
+                <th scope="col">Grupos</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th> 
+            </tr>
+        </thead>
         <tbody>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
-            </tr>
-            <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td class="nome">Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -56,7 +63,7 @@
             </tr>
 
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td class="nome">Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
@@ -75,6 +82,12 @@
                 <td>Toy Story</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>10000</td>
+            </tr>
+        </tfoot>
     </table>
 
 </body>
