--- a/modulo-04/html-css/exercicios/ex024/iframe001.html
+++ b/modulo-04/html-css/exercicios/ex024/iframe001.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+            border: 5px solid black;
+        }
+    </style>
     <title>Estudo de Iframe</title>
 </head>
 <body>
     <h1>Estudo de Iframe</h1>
     <p>Acessando um site por um iframe 
-        <iframe src="https://pt.wikipedia.org/wiki/Wikip%C3%A9dia:P%C3%A1gina_principal" frameborder="0"></iframe>
+        <iframe src="https://www.amazon.com.br/?&tag=hydrbrabk-20&ref=pd_sl_7rwd1q78df_e&adgrpid=79547423725&hvpone=&hvptwo=&hvadid=591863875878&hvpos=&hvnetw=g&hvrand=8302605898813891114&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001664&hvtargid=kwd-10573980&hydadcr=26346_11691057&gclid=EAIaIQobChMI0oHQg4Cr-AIVDTORCh2dRQgIEAAYASAAEgKMv_D_BwE" frameborder="0" scolling="auto">
+
+            <a href="https://pt.wikipedia.org/wiki/Wikip%C3%A9dia:P%C3%A1gina_principal" target="_blank">Wikipedia</a>
+        </iframe>
         
     </p>
 
