--- a/modulo-04/html-css/exercicios/ex024/iframe002.html
+++ b/modulo-04/html-css/exercicios/ex024/iframe002.html
@@ -16,7 +16,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus omnis aspernatur sequi reprehenderit, sint qui veritatis possimus porro quaerat vel dolorem. Animi aspernatur aliquam nulla doloremque ratione nam consequatur officiis!</p>
 
-    <iframe src="pag001.html" frameborder="0" width="400" height="400"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="400" height="400">
+        <p>Seu navegador não é compatível com o iframe</p>
+    </iframe>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, laudantium ad. Consequatur doloremque sed rem mollitia. Ducimus eligendi placeat quaerat consectetur ex nostrum hic! Qui unde cum rem distinctio eligendi?</p>
 </body>
 </html>
