--- a/modulo-04/html-css/exercicios/ex024/paginas-extras/pag001.html
+++ b/modulo-04/html-css/exercicios/ex024/paginas-extras/pag001.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: lightgray;
-            color: whitesmoke;
-        }
         table{
             border-collapse: collapse;
+            margin: auto;
+        }
+
+        h1{
+            text-align: center;
         }
         caption{
             padding: 10px;
