--- a/modulo-04/html-css/exercicios/ex024/iframe003.html
+++ b/modulo-04/html-css/exercicios/ex024/iframe003.html
@@ -32,7 +32,8 @@
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aspernatur pariatur dolore voluptatum. Dolores nobis voluptatibus culpa vitae adipisci reiciendis modi, optio libero minima odio rem dolorem quisquam, explicabo fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum atque eius eum, veritatis soluta odio libero ullam nemo? Possimus explicabo officia necessitatibus exercitationem asperiores eligendi, aspernatur omnis facilis ipsum laborum?</p>
 
-    <iframe src="" id="tela" name="frame"></iframe>
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>
+        <img src='imagens/google-imagens.jpg'>"></iframe>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, sequi laboriosam. Dicta libero molestias excepturi alias nobis, cumque, at beatae accusamus eveniet soluta harum atque culpa expedita minima tenetur asperiores?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam id eum ullam repellat voluptate provident quam incidunt distinctio ea. Odit a illum, minima alias delectus optio repellendus similique nam iste?</p>
 </body>
